--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@vercel/speed-insights": "1.0.10",
     "bcryptjs": "2.4.3",
     "class-variance-authority": "0.7.0",
+    "clipboard-copy": "4.0.1",
     "clsx": "2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "3.2.0",
@@ -53,7 +54,8 @@
     "sonner": "1.3.1",
     "stripe": "14.14.0",
     "tailwind-merge": "2.2.0",
-    "tailwindcss-animate": "1.0.7"
+    "tailwindcss-animate": "1.0.7",
+    "vaul": "^0.9.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "2.4.6",
