--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-day-picker": "8.10.0",
     "react-dom": "18",
     "react-hook-form": "7.49.3",
+    "resend": "3.2.0",
     "sharp": "0.33.2",
     "short-unique-id": "5.0.3",
     "slugify": "1.6.6",
