--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@react-email/components": "0.0.15",
     "@tanstack/react-query": "5.24.2",
     "@vercel/analytics": "1.2.1",
