--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"biome": "biome check"
+		"biome": "biome check",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"@faker-js/faker": "9.2.0",
@@ -41,6 +42,7 @@
 		"@types/node": "22.9.3",
 		"@types/react": "18.3.12",
 		"@types/react-dom": "18.3.1",
+		"husky": "9.1.7",
 		"postcss": "8.4.49",
 		"tailwindcss": "3.4.15",
 		"typescript": "5.7.2"
