--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"biome": "biome check",
+		"typecheck": "tsc --project tsconfig.json --noEmit",
 		"prepare": "husky"
 	},
 	"dependencies": {
