--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
 		"cmdk": "1.0.0",
-		"date-fns": "^4.1.0",
+		"date-fns": "2.28.0",
 		"dayjs": "1.11.13",
 		"lucide-react": "^0.460.0",
 		"motion": "11.11.17",
