--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
 	},
 	"dependencies": {
 		"@faker-js/faker": "9.2.0",
+		"@radix-ui/react-checkbox": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
@@ -28,15 +30,19 @@
 		"lucide-react": "^0.460.0",
 		"motion": "11.11.17",
 		"next": "15.0.3",
-		"next-themes": "0.4.3",
+		"next-themes": "^0.4.3",
 		"polished": "4.3.1",
 		"react": "18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.53.2",
+		"sonner": "^1.7.0",
 		"tailwind-merge": "2.5.4",
 		"tailwindcss-animate": "1.0.7",
-		"vaul": "^1.1.1"
+		"vaul": "^1.1.1",
+		"zod": "3.23.8",
+		"zsa": "0.6.0",
+		"zsa-react": "0.2.3"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.8.3",
