--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
 		"cmdk": "1.0.0",
 		"date-fns": "2.28.0",
 		"dayjs": "1.11.13",
+		"jose": "5.9.6",
 		"lucide-react": "^0.460.0",
+		"mongoose": "8.8.3",
 		"motion": "11.11.17",
 		"next": "15.0.3",
 		"next-themes": "^0.4.3",
@@ -36,6 +38,7 @@
 		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.53.2",
+		"resend": "4.0.1",
 		"sonner": "^1.7.0",
 		"tailwind-merge": "2.5.4",
 		"tailwindcss-animate": "1.0.7",
