--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"cmdk": "1.0.0",
 		"date-fns": "2.28.0",
 		"dayjs": "1.11.13",
+		"emblor": "1.4.7",
 		"jose": "5.9.6",
 		"lucide-react": "^0.460.0",
 		"mongoose": "8.8.3",
