--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"@types/node": "22.9.3",
 		"@types/react": "18.3.12",
 		"@types/react-dom": "18.3.1",
+		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"husky": "9.1.7",
 		"postcss": "8.4.49",
 		"tailwindcss": "3.4.15",
