--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"motion": "11.11.17",
 		"next": "15.0.3",
 		"next-themes": "^0.4.3",
+		"nextjs-toploader": "3.7.15",
 		"polished": "4.3.1",
 		"react": "18.3.1",
 		"react-day-picker": "8.10.1",
