--- a/package.json
+++ b/package.json
@@ -17,17 +17,14 @@
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-select": "^2.1.2",
+		"@radix-ui/react-separator": "^1.1.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tanstack/react-query": "5.61.5",
-		"@tiptap/extension-placeholder": "2.10.2",
-		"@tiptap/react": "2.10.2",
-		"@tiptap/starter-kit": "2.10.2",
 		"class-variance-authority": "0.7.0",
 		"clsx": "2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "2.28.0",
 		"dayjs": "1.11.13",
-		"emblor": "1.4.7",
 		"jose": "5.9.6",
 		"lucide-react": "^0.460.0",
 		"mongoose": "8.8.3",
@@ -35,15 +32,12 @@
 		"next": "15.0.3",
 		"next-themes": "^0.4.3",
 		"nextjs-toploader": "3.7.15",
-		"polished": "4.3.1",
 		"react": "18.3.1",
 		"react-day-picker": "8.10.1",
 		"react-dom": "18.3.1",
 		"react-hook-form": "7.53.2",
 		"resend": "4.0.1",
 		"sonner": "^1.7.0",
-		"tailwind-merge": "2.5.4",
-		"tailwindcss-animate": "1.0.7",
 		"vaul": "^1.1.1",
 		"zod": "3.23.8",
 		"zsa": "0.6.0",
@@ -57,7 +51,9 @@
 		"babel-plugin-react-compiler": "19.0.0-beta-df7b47d-20241124",
 		"husky": "9.1.7",
 		"postcss": "8.4.49",
+		"tailwind-merge": "2.5.5",
 		"tailwindcss": "3.4.15",
+		"tailwindcss-animate": "1.0.7",
 		"typescript": "5.7.2"
 	}
 }
