--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"react-hook-form": "7.53.2",
 		"resend": "4.0.1",
 		"sonner": "^1.7.0",
+		"stripe": "17.4.0",
 		"vaul": "^1.1.1",
 		"zod": "3.23.8",
 		"zsa": "0.6.0",
