--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@faker-js/faker": "9.2.0",
 		"@radix-ui/react-checkbox": "^1.1.2",
 		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.3",
 		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-popover": "^1.1.2",
 		"@radix-ui/react-select": "^2.1.2",
@@ -26,6 +27,7 @@
 		"cmdk": "1.0.0",
 		"date-fns": "2.28.0",
 		"dayjs": "1.11.13",
+		"format-string-by-pattern": "1.2.2",
 		"jose": "5.9.6",
 		"lucide-react": "^0.460.0",
 		"mongoose": "8.8.3",
