Add insight with AI and settings page

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"date-fns": "2.28.0",
 		"dayjs": "1.11.13",
 		"format-string-by-pattern": "1.2.2",
+		"input-otp": "^1.4.1",
 		"jose": "5.9.6",
 		"lucide-react": "^0.460.0",
 		"mongoose": "8.8.3",
@@ -35,6 +36,7 @@
 		"next": "15.1.0",
 		"next-themes": "^0.4.3",
 		"nextjs-toploader": "3.7.15",
+		"openai": "4.76.3",
 		"react": "19.0.0",
 		"react-day-picker": "8.10.1",
 		"react-dom": "19.0.0",
